update README.md and .gitignore